k8s/quarantine-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-quarantined-pods
  namespace: fintech-gateway
spec:
  podSelector:
    matchLabels:
      security.quarantine: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
